==> notrynohigh/BabyOS/bos/mcu/st/stm32f10x/mcu_stm32f10x_flash.c <==
#include <string.h>
#include "b_config.h"
#include "hal/inc/b_hal_flash.h"
#define FLASH_BASE_ADDR (0x8000000UL)
#define FLASH_PAGE_SIZE (2048)
#define FLASH_PAGE_SIZE (1024)
#define FLASH_MAX_SIZE (32 * 1024)
#define FLASH_MAX_SIZE (128 * 1024)
#define FLASH_MAX_SIZE (512 * 1024)
#define FLASH_MAX_SIZE (256 * 1024)
#define FLASH_KEY_1 (0x45670123UL)
#define FLASH_KEY_2 (0xCDEF89ABUL)
#define FLASH_PER_TIMEOUT (0x000B0000UL)
#define FLASH_PG_TIMEOUT (0x00002000UL)
#define MCU_FLASH ((McuFlashReg_t *)0x40022000)

int bMcuFlashUnlock()
{
    int retval      = 0;
    MCU_FLASH->KEYR = FLASH_KEY_1;
    MCU_FLASH->KEYR = FLASH_KEY_2;
    return retval;
}

int bMcuFlashErase(uint32_t raddr, uint32_t pages)
{
    int      retval  = 0;
    int      timeout = 0;
    uint32_t i       = 0;

    raddr = FLASH_BASE_ADDR + raddr;
    raddr = raddr / FLASH_PAGE_SIZE * FLASH_PAGE_SIZE;
    if ((raddr + (pages * FLASH_PAGE_SIZE)) > (FLASH_BASE_ADDR + FLASH_MAX_SIZE) ||
        ((MCU_FLASH->SR) & 0x01) != 0)
    {
        return -1;
    }

    for (i = 0; i < pages; i++)
    {
        MCU_FLASH->SR |= 0xFC;
        MCU_FLASH->CR |= (0x00000001 << 1);
        MCU_FLASH->AR = raddr;
        MCU_FLASH->CR |= (0x00000001 << 6);
        timeout = FLASH_PER_TIMEOUT;
        while (((MCU_FLASH->SR) & 0x01) != 0 && timeout > 0)
        {
            timeout--;
        }
        MCU_FLASH->CR &= ~(0x00000001 << 1);
        if (timeout <= 0)
        {
            retval = -2;
            break;
        }
        raddr += FLASH_PAGE_SIZE;
    }
    return retval;
}

int bMcuFlashWrite(uint32_t raddr, const uint8_t *pbuf, uint32_t len)
{
    int      timeout = 0;
    uint16_t wdata   = 0;
    uint32_t wlen = (len + 1) / 2, i = 0;
    raddr = FLASH_BASE_ADDR + raddr;
    if (pbuf == NULL || (raddr & 0x1) || (raddr + len) > (FLASH_MAX_SIZE + FLASH_BASE_ADDR) ||
        ((MCU_FLASH->SR) & 0x01) != 0)
    {
        return -1;
    }

    for (i = 0; i < wlen; i++)
    {
        wdata = (wdata << 8) | pbuf[i * 2 + 1];
        wdata = (wdata << 8) | pbuf[i * 2 + 0];

        MCU_FLASH->SR |= 0xFC;
        MCU_FLASH->CR |= (0x00000001 << 0);
        *((volatile uint16_t *)raddr) = wdata;

        timeout = FLASH_PG_TIMEOUT;
        while (((MCU_FLASH->SR) & 0x01) != 0 && timeout > 0)
        {
            timeout--;
        }
        MCU_FLASH->CR &= ~(0x00000001 << 0);
        if (timeout <= 0)
        {
            return -2;
        }
        raddr += 2;
    }
    return (wlen * 2);
}
